fix build image
